--- a/_posts/2019-7-15-人工智能发展史.md
+++ b/_posts/2019-7-15-人工智能发展史.md
@@ -4,18 +4,18 @@ title: 人工智能发展史
 date: 2019-07-15 00:00:00 +0300
 description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
 img: software.jpg # Add image post (optional)
-tags: [Productivity, Software] # add tag
+tags: [AI] # add tag
 ---
 
 
 
-一部气势恢宏的人工智能发展史
+ ### 人工智能发展史
 
  
 
 AlphaGo的胜利，无人驾驶的成功，模式识别的突破性进展，人工智能的的飞速发展一次又一次地挑动着我们的神经。作为人工智能的核心，机器学习也在人工智能的大步发展中备受瞩目，光辉无限。
 
- **人工智能发展史**
+
 
 如今，机器学习的应用已遍及人工智能的各个分支，如**专家系统、自动推理、自然语言理解、模式识别、计算机视觉、智能机器人等领域。**
 
