--- a/_posts/2019-9-10-离散仿真引擎基础.md
+++ b/_posts/2019-9-10-离散仿真引擎基础.md
@@ -2,8 +2,10 @@
 layout: post
 title: 离散仿真引擎基础
 date: 2019-9-10 10:32:20 +0300
+description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
 img: i-rest.jpg # Add image post (optional)
-tags: [Unity 3D]
+fig-caption: # Add figcaption (optional)
+tags: [Holidays, Hawaii]
 ---
 
 ### 1.简答题
